--- a/.github/workflows/create-eks-cluster.yaml
+++ b/.github/workflows/create-eks-cluster.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  create-eks-cluster:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'workflow_dispatch' &&
@@ -18,9 +18,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.5.7
+        terraform_version: "1.5.7"
+
+    - name: Terraform fmt
+      id: fmt
+      run: terraform fmt -check
+      continue-on-error: false
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
