--- a/.github/workflows/create-eks-cluster.yaml
+++ b/.github/workflows/create-eks-cluster.yaml
@@ -22,10 +22,10 @@ jobs:
       with:
         terraform_version: "1.5.7"
 
-    - name: Terraform fmt
-      id: fmt
-      run: terraform fmt -check
-      continue-on-error: false
+    #- name: Terraform fmt
+    #  id: fmt
+    #  run: terraform fmt -check
+    #  continue-on-error: false
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
