Enable terraform apply step

--- a/.github/workflows/create-eks-cluster.yaml
+++ b/.github/workflows/create-eks-cluster.yaml
@@ -38,4 +38,4 @@ jobs:
       run: |
         terraform init
         terraform plan -out=tfplan
-        #terraform apply -auto-approve tfplan
+        terraform apply -auto-approve tfplan
