--- a/.github/workflows/create-eks-cluster.yaml
+++ b/.github/workflows/create-eks-cluster.yaml
@@ -1,4 +1,4 @@
-name: Create EKS cluster with TF
+name: Plan EKS cluster with TF
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-eks-cluster:
+  plan-eks-cluster:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'workflow_dispatch' &&
@@ -27,15 +27,14 @@ jobs:
     #  run: terraform fmt -check
     #  continue-on-error: false
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+    #- name: Configure AWS Credentials
+    #  uses: aws-actions/configure-aws-credentials@v1
+    #  with:
+    #    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #    aws-region: us-west-2
 
-    - name: Terraform init and apply
+    - name: Terraform init and plan
       run: |
         terraform init
-        terraform plan -out=tfplan
-        terraform apply -auto-approve tfplan
+        terraform plan
