--- a/manifests/nginx-deployment.yaml
+++ b/manifests/nginx-deployment.yaml
@@ -22,3 +22,15 @@ spec:
         name: nginx
         resources: {}
 status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: nginx
