--- a/.github/workflows/create-eks-cluster.yaml
+++ b/.github/workflows/create-eks-cluster.yaml
@@ -27,12 +27,12 @@ jobs:
     #  run: terraform fmt -check
     #  continue-on-error: false
 
-    #- name: Configure AWS Credentials
-    #  uses: aws-actions/configure-aws-credentials@v1
-    #  with:
-    #    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #    aws-region: us-west-2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
 
     - name: Terraform init and plan
       run: |
